View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024056 | Community | OCCT:Modeling Algorithms | public | 2013-07-02 21:30 | 2016-12-09 16:38 |
Reporter | mach22 | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2012 | ||
Product Version | 6.6.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0024056: error LNK2019: unresolved external symbol | ||||
Description | TopOpeBRep_EdgesIntersector::Tolerance2(void)const I have tried to use this method and I have the unresolved external symbol, from linking. I have seen the TopOpeBRep_EdgesIntersector.hxx file where the Method Tolerance2() is defined but I can't find the implementation not in TopOpeBRep_EdgesIntersector.cxx, ixx, jxx or TopOpeBRep_EdgesIntersector_1.cxx Is there a missing implementation for this method? I have found some other similar cases, if is there a real problem with this method I can report these other cases. | ||||
Steps To Reproduce | try calling the method TopOpeBRep_EdgesIntersector edges; double tol2 = edges.Tolerance2(); | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
To reproduce problem creation of testing case is required |
|
Test case is not needed. |
|
The classes TopOpeBRep* constitute the old set of Boolean operations that are not maintained in the current mainline. Therefore in order to fix this bug it is needed simply to remove the method that has no implementation. Dear Ilya, please take care of this. |
|
Branch CR24056 has been created by isn. SHA-1: 27746b4d2083836dbba4e672345deb86b6e0b88c Detailed log of new commits: Author: isn Date: Fri Jul 15 17:39:25 2016 +0300 0024056: error LNK2019: unresolved external symbol Clean out the TopOpeBRep* classes Author: isn Date: Thu Jul 14 17:17:22 2016 +0300 remark Author: isn Date: Thu Jul 14 13:45:18 2016 +0300 test cases Author: isn Date: Mon Jul 11 12:52:59 2016 +0300 0027264: Weird difference between two BRepTools::Write() overloads Assume that the brep file contains DBRep_DrawableShape variable if the file header is absent |
|
Branch CR24056_1 has been created by isn. SHA-1: 3f6cc825d63f99a44124b41a1a4716ac8da4209e Detailed log of new commits: Author: isn Date: Fri Jul 15 18:37:53 2016 +0300 0024056: error LNK2019: unresolved external symbol Clean out the TopOpeBRep* classes |
|
Branch CR24056 has been deleted by isn. SHA-1: 27746b4d2083836dbba4e672345deb86b6e0b88c |
|
i've removed some unimplemented functions from TopOpeBRep* classes |
|
Reviewed. |
|
Dear BugMaster, Branch CR24056_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 27746b4d2083836dbba4e672345deb86b6e0b88c Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 1 (0 on master) products component: Linux: 64 Windows: 0 MacOS: 1122 New warning has been detected on MacOS: http://jenkins-test-05.nnov.opencascade.com/view/CR24056_1-master/job/CR24056_1-master-OCCT-MacOS-opt-compile/1/warnings7Result/ Regressions/Differences: Not detected Testing cases: Not needed Testing on Linux: Total MEMORY difference: 89962235 / 90033000 [-0.08%] Total CPU difference: 19286.219999999987 / 19191.60999999992 [+0.49%] Testing on Windows: Total MEMORY difference: 57425725 / 57431602 [-0.01%] Total CPU difference: 18324.407863398785 / 18076.974677298753 [+1.37%] |
|
Dear Ilya, Branch CR24056_1 has been rejected due to: - additional warnings |
|
Branch CR24056_1 has been updated by msv. SHA-1: 286dd365539d5ab1d8a8d1c9452f042e62d1a16f Detailed log of new commits: Author: msv Date: Tue Jul 19 14:58:48 2016 +0300 Remove unused private fields. |
|
Ilya is on vacation. |
|
Warning was eliminated. |
|
Dear BugMaster, Branch CR24056_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 286dd365539d5ab1d8a8d1c9452f042e62d1a16f Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 64 Windows: 0 MacOS: 1147 Regressions/Differences: Not detected Testing cases: Not needed Testing on Linux: Total MEMORY difference: 90381018 / 90034966 [+0.38%] Total CPU difference: 19440.280000000046 / 19191.44999999992 [+1.30%] Testing on Windows: Total MEMORY difference: 57431869 / 57431602 [+0.00%] Total CPU difference: 18067.349415598816 / 18076.974677298753 [-0.05%] |
|
Branch CR24056_1 has been deleted by inv. SHA-1: 286dd365539d5ab1d8a8d1c9452f042e62d1a16f |
occt: master 0f1deae3 2016-07-15 15:37:53
Committer: bugmaster Details Diff |
0024056: error LNK2019: unresolved external symbol Clean out the TopOpeBRep* classes Remove unused private fields. |
Affected Issues 0024056 |
|
mod - src/TopOpeBRep/FILES | Diff File | ||
mod - src/TopOpeBRep/TopOpeBRep_EdgesIntersector.hxx | Diff File | ||
mod - src/TopOpeBRep/TopOpeBRep_FacesFiller.hxx | Diff File | ||
rm - src/TopOpeBRep/TopOpeBRep_FacesFiller_VPonR.cxx | Diff File | ||
mod - src/TopOpeBRep/TopOpeBRep_GeomTool.hxx | Diff File | ||
mod - src/TopOpeBRepDS/FILES | Diff File | ||
rm - src/TopOpeBRepDS/TopOpeBRepDS_DSS.cxx | Diff File | ||
rm - src/TopOpeBRepDS/TopOpeBRepDS_DSS.hxx | Diff File | ||
mod - src/TopOpeBRepDS/TopOpeBRepDS_EXPORT.hxx | Diff File | ||
mod - src/TopOpeBRepDS/TopOpeBRepDS_HDataStructure.hxx | Diff File | ||
mod - src/TopOpeBRepDS/TopOpeBRepDS_repvg.hxx | Diff File | ||
mod - src/TopOpeBRepDS/TopOpeBRepDS_samdom.hxx | Diff File | ||
mod - src/TopOpeBRepTool/TopOpeBRepTool_2d.hxx | Diff File | ||
mod - src/TopOpeBRepTool/TopOpeBRepTool_mkTondgE.hxx | Diff File | ||
mod - src/TopOpeBRepTool/TopOpeBRepTool_TOPOLOGY.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-07-02 21:30 | mach22 | New Issue | |
2013-07-02 21:30 | mach22 | Assigned To | => ifv |
2014-01-29 16:33 | bugmaster | Note Added: 0027688 | |
2014-01-29 16:33 | bugmaster | Assigned To | ifv => apn |
2014-01-29 16:33 | bugmaster | Status | new => assigned |
2014-02-11 16:31 | apn | Note Added: 0027842 | |
2014-02-11 16:32 | apn | Test case number | => Not needed |
2014-02-11 16:32 | apn | Assigned To | apn => ifv |
2016-07-06 18:57 |
|
Assigned To | ifv => msv |
2016-07-06 19:02 |
|
Note Added: 0055734 | |
2016-07-06 19:02 |
|
Assigned To | msv => isn |
2016-07-15 18:09 | git | Note Added: 0055961 | |
2016-07-15 18:46 | git | Note Added: 0055966 | |
2016-07-15 18:49 | git | Note Added: 0055967 | |
2016-07-15 18:59 |
|
Assigned To | isn => msv |
2016-07-15 18:59 |
|
Status | assigned => resolved |
2016-07-15 19:01 |
|
Note Added: 0055969 | |
2016-07-15 19:25 |
|
Note Added: 0055971 | |
2016-07-15 19:25 |
|
Assigned To | msv => bugmaster |
2016-07-15 19:25 |
|
Status | resolved => reviewed |
2016-07-18 17:16 |
|
Assigned To | bugmaster => apv |
2016-07-19 13:45 |
|
Note Added: 0056022 | |
2016-07-19 13:45 |
|
Assigned To | apv => isn |
2016-07-19 13:45 |
|
Status | reviewed => assigned |
2016-07-19 13:46 |
|
Note Edited: 0056022 | |
2016-07-19 13:47 |
|
Note Added: 0056023 | |
2016-07-19 14:58 | git | Note Added: 0056029 | |
2016-07-19 14:59 |
|
Note Added: 0056030 | |
2016-07-19 14:59 |
|
Assigned To | isn => msv |
2016-07-19 14:59 |
|
Status | assigned => resolved |
2016-07-19 14:59 |
|
Note Added: 0056032 | |
2016-07-19 14:59 |
|
Assigned To | msv => bugmaster |
2016-07-19 14:59 |
|
Status | resolved => reviewed |
2016-07-19 16:04 |
|
Assigned To | bugmaster => apv |
2016-07-20 12:48 |
|
Note Added: 0056049 | |
2016-07-20 12:48 |
|
Assigned To | apv => bugmaster |
2016-07-20 12:48 |
|
Status | reviewed => tested |
2016-07-22 10:23 | bugmaster | Changeset attached | => occt master 0f1deae3 |
2016-07-22 10:23 | bugmaster | Status | tested => verified |
2016-07-22 10:23 | bugmaster | Resolution | open => fixed |
2016-07-22 10:43 | git | Note Added: 0056097 | |
2016-07-25 14:44 | bugmaster | Target Version | => 7.1.0 |
2016-12-09 16:31 |
|
Status | verified => closed |
2016-12-09 16:38 |
|
Fixed in Version | => 7.1.0 |