0024056: error LNK2019: unresolved external symbol

Clean out the TopOpeBRep* classes

Remove unused private fields.