src/TopOpeBRepDS/TopOpeBRepDS_samdom.hxx
@@ -22,7 +22,6 @@
 Standard_EXPORT void FDSSDM_prepare(const Handle(TopOpeBRepDS_HDataStructure)&);
 Standard_EXPORT void FDSSDM_makes1s2(const TopoDS_Shape& S,TopTools_ListOfShape& L1,TopTools_ListOfShape& L2);
 Standard_EXPORT void FDSSDM_s1s2makesordor(const TopTools_ListOfShape& L1,const TopTools_ListOfShape& L2,const TopoDS_Shape& S,TopTools_ListOfShape& LSO,TopTools_ListOfShape& LDO);
-Standard_EXPORT Standard_Boolean FDSSDM_hass1s2(const TopoDS_Shape& S);
 Standard_EXPORT void FDSSDM_s1s2(const TopoDS_Shape& S,TopTools_ListOfShape& LS1,TopTools_ListOfShape& LS2);
 Standard_EXPORT void FDSSDM_sordor(const TopoDS_Shape& S,TopTools_ListOfShape& LSO,TopTools_ListOfShape& LDO);
 Standard_EXPORT Standard_Boolean  FDSSDM_contains(const TopoDS_Shape& S,const TopTools_ListOfShape& L);
